changes while opening unreal engine file

--- a/Fire_Esc_Simulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Fire_Esc_Simulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -223,7 +223,7 @@ InterchangeGenericAssetsPipeline=InterchangeGenericAssetsPipeline.Skeletal Meshe
 AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequins/Anims/Unarmed/Attack
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -251,6 +251,8 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins/Anims/Unarmed
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins/Anims
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins
@@ -258,7 +260,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/Input/Actions
 ContentBrowserDrawer.JumpMRU=/All/Game/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/Crouch_Anim
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins/Meshes
@@ -311,7 +312,7 @@ LastLevel=/Game/ThirdPerson/Lvl_ThirdPerson
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.NavMovement.NavAgentProps\" "
+Object="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -576,7 +577,7 @@ AnimSequence.Animation Model=True
 AnimSequence.Compression=True
 AnimSequence.AdditiveSettings=True
 AnimSequence.RootMotion=True
-AnimSequence.Interchange =True
+AnimSequence.Interchange=True
 AnimSequence.File Path=True
 AnimSequence.CustomAttributes=True
 AnimSequence.MetaData=True
@@ -722,7 +723,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1284.800 Y=724.800
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
