--- a/Fire_Esc_Simulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Fire_Esc_Simulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -223,7 +223,7 @@ InterchangeGenericAssetsPipeline=InterchangeGenericAssetsPipeline.Skeletal Meshe
 AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -319,7 +319,7 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object\" "
 CameraComponent="\"Object\" "
 CharacterMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
@@ -618,24 +618,25 @@ AnimGraphNode_SequencePlayer.Bindings=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/Mannequins/Anims/Unarmed/ABP_Unarmed
-MRUItem1=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem2=/Game/Input/IMC_Default
-MRUItem3=/Game/Input/Actions/IA_Crouch
-MRUItem4=/Game/Crouch_Anim/CrouchWalk
-MRUItem5=/Game/Crouch_Anim/Crouch
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Characters/Mannequins/Anims/Unarmed/ABP_Unarmed
+MRUItem2=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem3=/Game/Input/IMC_Default
+MRUItem4=/Game/Input/Actions/IA_Crouch
+MRUItem5=/Game/Crouch_Anim/CrouchWalk
+MRUItem6=/Game/Crouch_Anim/Crouch
 MRUItem7=/Game/Input/Actions/IA_Sprint
 MRUItem8=/Game/Input/IMC_MouseLook
 
@@ -692,8 +693,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -724,7 +725,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
